--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbaccfd4",
+   "id": "bff42210",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51a7ef8",
+   "id": "de570386",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc77499",
+   "id": "54f2db00",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "44e60113",
+   "id": "40a577d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714ee67c",
+   "id": "63bdb2ae",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "091e9463",
+   "id": "b28da71a",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "76816dcf",
+   "id": "b98351d9",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6848fb7e",
+   "id": "1454bfb9",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0581cbc",
+   "id": "f7c7934f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dd5b87b7",
+   "id": "8593012f",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75c1575d",
+   "id": "ea67c8a6",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a71db1c",
+   "id": "9ebd3209",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f23c504",
+   "id": "351660eb",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46fb3ab0",
+   "id": "09fc4931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "60df1081",
+   "id": "ea8a4e33",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a8496d81",
+   "id": "457b49e2",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d00e1c",
+   "id": "1830596a",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dcf5a397",
+   "id": "c3188864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cba47667",
+   "id": "f9e25c0e",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ffa72546",
+   "id": "27761aea",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0bfce9a6",
+   "id": "77b4fc35",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca20f58f",
+   "id": "605b4b06",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c112ea1d",
+   "id": "1ee8a629",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d79cd23f",
+   "id": "44cb7d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6ed10dd8",
+   "id": "728937ed",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e6c5f98a",
+   "id": "e73a341d",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "72c700cb",
+   "id": "3f40fcbb",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5201d2dc",
+   "id": "b432c35f",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcd1b99",
+   "id": "b6270ae1",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "158d562f",
+   "id": "76d40d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4928c60d",
+   "id": "0ac458d9",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cafdbb92",
+   "id": "6cc3484e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a6a6e209",
+   "id": "724cab89",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9575fe8",
+   "id": "41271835",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194cdc42",
+   "id": "8263fdd3",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b7dde6db",
+   "id": "2ebdf607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1cb11a5f",
+   "id": "3d252857",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "54b428eb",
+   "id": "f861d4db",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9e0dd147",
+   "id": "f904c938",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "18add8d3",
+   "id": "a3f72c34",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7b429042",
+   "id": "b0120843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b062ad",
+   "id": "3993a96f",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3b974d1d",
+   "id": "b888d221",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d1a5008c",
+   "id": "8c4376c6",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "600fdb76",
+   "id": "15b108dd",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0374d90a",
+   "id": "fd5dce6c",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0ae129a5",
+   "id": "e74ed8a4",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0681e65b",
+   "id": "3d137be2",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f23183f8",
+   "id": "b999c568",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "956a36cf",
+   "id": "e15a6f03",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "909b947d",
+   "id": "289318ea",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d3a1e7d0",
+   "id": "0f522a0e",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bffcbd3e",
+   "id": "954a56e6",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8b875d86",
+   "id": "e5b3af3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "481533aa",
+   "id": "739f9ec7",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ea6a6eaa",
+   "id": "ac6bfa3b",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fd7303b6",
+   "id": "f2686fcc",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16dc3705",
+   "id": "636a9778",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1184,12 +1184,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "964924c0",
+   "cell_type": "markdown",
+   "id": "e8f8a407",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# f-strings\n",
+    "\n",
+    "Normally, a string contains precisely the characters that we write in it:\n",
+    "\n",
+    "    s = 'abcde'\n",
+    "    \n",
+    "`s` now contains 5 characters, exactly what we've written.  This is fine, until we want to have the value of a variable in a string. Then things get tricky:\n",
+    "\n",
+    "    name = 'Reuven'\n",
+    "    print('Hello', + "
+   ]
   }
  ],
  "metadata": {
